update for icons

--- a/web/index.html
+++ b/web/index.html
@@ -29,10 +29,14 @@ project-10<br/>
 <textarea id ="txtArea" readonly></textarea>
 
 <div id ="box">
-<button id ="button1" class ="mainbutton" onclick ="disp(1)">P</button>
-<button id ="button2" class ="mainbutton" onclick ="disp(2)">M</button>
-<button id ="button3" class ="mainbutton" onclick ="disp(3)">R</button>
-<button id ="button4" class ="mainbutton" onclick ="disp(4)">S</button>
+<button id ="button1" class ="mainbutton" onclick ="disp(1)">
+<IMG src="./project.png" id ="img1"></button>
+<button id ="button2" class ="mainbutton" onclick ="disp(2)">
+<IMG src="./member.png" id ="img2"></button>
+<button id ="button3" class ="mainbutton" onclick ="disp(3)">
+<IMG src="./history2.png" id ="img3"></button>
+<button id ="button4" class ="mainbutton" onclick ="disp(4)">
+<IMG src="./setting.png" id ="img4"></button>
 </div>
 <div>
 <button id ="subbutton1" class ="subbutton" onclick ="subDisp(1)">project</button>
@@ -58,6 +62,7 @@ project-10<br/>
 <button id ="contains31" class ="contains" onclick ="settxt(31)">1st</button>
 <button id ="contains32" class ="contains" onclick ="settxt(32)">2nd</button>
 <button id ="contains33" class ="contains" onclick ="settxt(33)">3rd</button>
+<button id ="contains34" class ="contains" onclick ="settxt(34)">4th</button>
 <!--
 add here
 -->
