--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,9 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 <!--[if IE]>
 <link rel ="stylesheet" type ="text/css" href ="./test.css" media ="all">
 <script type ="text/javascript" src ="./test.js"></script>
+<script type ="text/javascript">
+//window.alert("use chrome");
+</script>
 <![endif]-->
 </head>
 <body onclick ="animemanage()">
@@ -60,9 +63,6 @@ project-10<br/>
 <button id ="contains32" class ="contains" onclick ="settxt(32)">2nd</button>
 <button id ="contains33" class ="contains" onclick ="settxt(33)">3rd</button>
 <button id ="contains34" class ="contains" onclick ="settxt(34)">4th</button>
-<button id ="contains35" class ="contains" onclick ="settxt(35)">5th</button>
-<button id ="contains36" class ="contains" onclick ="settxt(36)">6th</button>
-<button id ="contains37" class ="contains" onclick ="settxt(37)">7th</button>
 <!--
 add here
 -->
