--- a/prj/prj.html
+++ b/prj/prj.html
@@ -6,18 +6,12 @@
 <body>
 <div>
 
-<div>
-	<form name="output">
-		<textarea name ="output" class ="output" readonly>
-		</textarea>
-	</form>
+<div id ="output">
 </div>
 
 <div>
-	<form name ="input">
-		<textarea name="input" class ="input" >
-		</textarea>
-	</form>
+	<textarea id ="input"></textarea>
+	<button id ="submit">say</button>
 </div>
 
 
