--- a/web/index.html
+++ b/web/index.html
@@ -63,6 +63,8 @@ project-10<br/>
 <button id ="contains35" class ="contains" onclick ="settxt(35)">5th</button>
 <button id ="contains36" class ="contains" onclick ="settxt(36)">6th</button>
 <button id ="contains37" class ="contains" onclick ="settxt(37)">7th</button>
+<button id ="contains38" class ="contains" onclick ="settxt(38)">8th</button>
+<button id ="contains39" class ="contains" onclick ="settxt(39)">9th</button>
 <!--
 add here
 -->
