--- a/web/index.html
+++ b/web/index.html
@@ -65,6 +65,7 @@ project-10<br/>
 <button id ="contains37" class ="contains" onclick ="settxt(37)">7th</button>
 <button id ="contains38" class ="contains" onclick ="settxt(38)">8th</button>
 <button id ="contains39" class ="contains" onclick ="settxt(39)">9th</button>
+<button id ="contains310" class ="contains" onclick ="settxt(310)">10th</button>
 <!--
 add here
 -->
