--- a/web/index.html
+++ b/web/index.html
@@ -66,6 +66,9 @@ project-10<br/>
 <button id ="contains38" class ="contains" onclick ="settxt(38)">8th</button>
 <button id ="contains39" class ="contains" onclick ="settxt(39)">9th</button>
 <button id ="contains310" class ="contains" onclick ="settxt(310)">10th</button>
+<button id ="contains311" class ="contains" onclick ="settxt(311)">11th</button>
+<button id ="contains312" class ="contains" onclick ="settxt(312)">12th</button>
+<button id ="contains313" class ="contains" onclick ="settxt(313)">etc</button>
 <!--
 add here
 -->
